This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

1.96 (UNRELEASED)
-----------------
Bug fixes:
 - report.py, anonymize(): Only replace whole words, not substrings.
   (LP: #966562)
 - apport_python_hook.py: Fix filtering of org.freedesktop.DBus.Error.NoReply
   exceptions. (LP: #958575)

1.95 (2012-03-22)
-----------------
Bug fixes:
 - ui.py: Ensure that the report file is readable by the crash reporting daemon
   after running through collect_info(). Thanks Evan Dandrea.
 - apport-gtk, apport-kde: Set the window title to the distribution name, as
   per http://wiki.ubuntu.com/ErrorTracker#error . Thanks Evan Dandrea.
   (LP: #948015)
 - test/run: Ignore obsolete packages on the system, to avoid breaking the GUI
   tests due to them.
 - apport-gtk, apport-kde: When reporting a "system crash", don't say "... of
   this program version", but "...of this type", as we don't show a program
   version in the initial dialog (https://wiki.ubuntu.com/ErrorTracker#error)
   (LP: #961065)
 - problem_report.py, write_mime(): Do not put a key inline if it is bigger
   than 1 kB, to guard against very long lines. (LP: #957326)
 - etc/cron.daily/apport: Do not remove whoopsie's *.upload* stamps every day,
   only if they are older than a week. whoopsie comes with its own cron job
   which deals with them. Thanks Steve Langasek. (LP: #957102)
 - report.py, mark_ignore(): Fix crash if executable went away underneath us.
   (LP: #961410)
 - apport-gtk: Do not compare current continue button label against a
   translated string.  Instead just remember whether or not we can restart the
   application. (LP: #960439)
 - hookutils.py, command_output(): Add option to keep the locale instead of
   disabling it.
 - hookutils.py, command_output(): Actually make the "input" parameter work,
   instead of causing an eternal hang. Add tests for all possible modes of
   operation.